--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,12 @@
     --white: #fff;
     --color-red:  #e60b0b;
     --faint-red: #f3a5a5ee;
+    --orangy: rgb(255, 145, 0);
 }
 
 html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    box-sizing: border-box;
 }
 
 body {
@@ -55,4 +57,71 @@ a {
     background-color: var(--color-red);
     color: var(--white);
     border-radius: 5px;
+}
+
+/* Listing Item styles */
+
+.listing-area {
+    padding: 15px;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.listing-card {
+    position: relative;;
+    flex: 0 0 32%;
+    width: 300px;
+    border-radius: 12px;
+    background-color: #fff;
+    box-shadow: 13px 18px 21px 0px rgba(0,0,0,0.1);
+}
+
+.img-fluid {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.discount, .rating {
+    position: absolute;
+}
+
+.discount {
+    top: 0;
+    left: 0;
+    color: var(--white);
+    background-color: var(--orangy);
+    border-top-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+    padding: 3px 7px;
+    font-size:medium;
+}
+
+.rating {
+    right: 5%;
+    bottom: 40%;
+    background-color: var(--white);
+    border-radius: 6px;
+    padding: 5px 10px;
+    display: flex;
+    gap: 5px;
+}
+
+.star {
+    color: var(--orangy);
+    display: flex;
+    align-items: center;
+}
+
+.listing-details {
+    padding-left: 16px;
+}
+
+.price {
+    color: var(--color-red);
+    font-weight: 600;
 }
